EKS/Fargate/advanced/app/03-ns-ums/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ums
# Apps deployed in this namespace will run on a Fargate fp-ums
