EKS/Fargate/advanced/app/03-ns-ums/02-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    runon: fargate
  namespace: ns-ums
spec:
  type: ExternalName
  externalName: usermgmtdb.cxo.us-east-1.rds.amazonaws.com
